=== FW 1.1 ===
* Major code cleanup (Unused modules removed)
* High current path (HC) related code from DiebieMS removed
* "testbms" terminal command is now functionnal for testing slaves boards
* Timeout charge retry is now up to 1000 seconds
* Fixed toggle switch bug at charging
* Fixed charging issue with same charge/discharge port
* Default settings are now set for Master-LV
* LTC6812 & LTC6813 complete support
* Balancing mask are now all uint_32t for supporting LTC6813
* Precharge : "persistent" option is now renamed to "forced"
* Min/Max Charge & discharge temperatures protections are now funtionnal
* Support for new Master-HV onboard precharge relay on PC15
* Slave board temperature measurement as been remove from battery temp statistics
* Battery MAX can be now set to 120 celsius for disabling without error

=== FW 1.0 ===
* ENNOID-BMS Master initial release
